Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-130972

repc is not deterministic

XMLWordPrintable

    • ef7e1a217 (dev), f84f5a95e (6.10), 9d1deb37b (6.9), 044eb2c75 (tqtc/lts-6.8)

      Order of qRegisterMetaType changes randomly in generated output. Those types seem to be stored in a QSet which in turn holds them in QHash and the hash is randomly seeded so the order may change between runs.

      This means the builds are not reproducible and it also causes unnecessary recompilation for tools like ccache since it sees the file has changed.

      Perhaps repc could set QT_HASH_SEED=0 environment variable at startup to avoid this.

        For Gerrit Dashboard: QTBUG-130972
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes