repc: Create reproduceable builds

Set a deterministic hash value.

Pick-to: 6.10 6.9 6.8
Fixes: QTBUG-130972
Task-number: QTBUG-105926
Change-Id: Ied9daee22475765b74145a78f9a3836a030efdfe
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Joni Poikelin <joni.poikelin@qt.io>